# remote-embedding

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml
src/remote_embedding/: __init__.py  __main__.py  app.py  remote.py
